- added component class to fix issues with divs aligning badly

--- a/src/app.less
+++ b/src/app.less
@@ -83,7 +83,7 @@ body {
 				float: left;
 				width: 100%;
 
-				div:first-child {
+				div.component {
 					float: left;
 					width: 80%;
 				}
@@ -216,6 +216,7 @@ a.is-read {
 }
 
 .book-info {
+	float: left;
     border-spacing: 0 8px;
 
     .row {
